@@ -592,7 +592,8 @@ Other Hatari programs and utilities:
 .br
 .IR hmsa (1),
 .IR zip2st (1),
-.IR atari-hd-image (1),
+.IR atari\-convert\-dir (1),
+.IR atari\-hd\-image (1),
 .IR hatariui (1),
 .IR hconsole (1),
 .IR gst2ascii (1),
