@@ -1,4 +1,4 @@
-.TH "atari-hd-image" "1" "2014-06-24" "Hatari" "Hatari utilities"
+.TH "atari-hd-image" "1" "2015-04-26" "Hatari" "Hatari utilities"
 .SH NAME
 atari\-hd\-image \- tool for creating a harddisk image for use with Hatari
 .SH SYNOPSIS
@@ -9,7 +9,8 @@ atari\-hd\-image \- tool for creating a harddisk image for use with Hatari
 .RI [directory]
 .SH DESCRIPTION
 Create an ACSI/IDE harddisk image for Hatari with a single Atari
-compatible DOS partition (using sfdisk, mkdosfs and dd).
+compatible DOS partition (using sfdisk, mkdosfs, atari\-convert\-dir,
+mcopy and dd).
 .SH OPTIONS
 .TP 
 .B size
@@ -24,7 +25,9 @@ Name for the harddisk image (default: hd.img)
 Name for the single partition (default: DOS)
 .TP
 .B directory
-directory for initial content copied to the image
+directory for initial content copied to the image. HINT: use
+\fIatari\-convert\-dir\fP tool first, to detect long file names
+that aren't anymore unique when clipped!
 .SH EXAMPLES
 .TP
 16MB 'hd.img' HD image:
@@ -33,6 +36,7 @@ directory for initial content copied to the image
 8MB image with partition named 'TEST', and files from content/:
 .B atari\-hd\-image 8 8mb-disk.img TEST content/
 .SH SEE ALSO
+.IR atari\-convert\-dir (1),
 .IR hmsa (1),
 .IR zip2st (1),
 .IR hatari (1),
